
2012-08-11
- bios/floppy.c: Renamed flopini() to flop_add_drive(). (VRI)
- bios/blkdev.c: Fixed Mediach() return value when there is no floppy. (VRI)

2012-08-13
- bios/amiga.c bios/amiga.h bios/floppy.c: Added support for reading ST floppies
  on Amiga. (VRI)
- tools/erd.c: Improve handling of ICONBLKs and TEDINFOs prior to upcoming
  icon resource decompiler. (RFB)
- desk/deskapp.c desk/icons.c desk/icons.h: Rename gl_ilist[] to
  icon_rs_iconblk[] for upcoming icon resource decompiler. (RFB)

2012-08-15
- bios/machine.c: Disabled currently useless 64 kB _FRB buffer on Amiga. (VRI)
- aes/* desk/*: Changed file selector string parameter types to BYTE*. (VRI)
- aes/*: Changed scrap functions string parameter types to BYTE*. (VRI)
- aes/*: Changed shell functions string parameter types to BYTE*. (VRI)
- aes/*: Removed global variables ad_scdir, ad_path, ad_scrap and ad_scmd. (VRI)
- aes/gemfslib.c: Fixed the file selector for deeply nested directories. (VRI)
- tools/erd.c: Add support for icon resource decompilation. (RFB)
- desk/icon.def desk/icon.rsc: Added icon resource. (RFB)

2012-08-16
- desk/icons.c po/POTFILES.in: Make icon descriptions translatable. (RFB)
- tools/erd.c: Fix bug in code generated by icon resource decompilation. (RFB)
- Makefile .cvsignore desk/.cvsignore: Add support for building icons.*
  from icon resource. (RFB)
- desk/icons.c desk/icons.h: Removed from CVS, now generated by ird. (RFB)
- doc/resource.txt: Updated to include information about ird. (RFB)
- desk/icons/*: Removed all files in directory from CVS, no longer used. (RFB)
- desk/deskapp.c desk/desktop.def desk/desktop.rsc include/config.h
  tools/erd.c: Code cleanup: move non-displayed/untranslated strings from
  desktop resource to C code. (RFB)

2012-08-17
- aes/gem.def aes/gem.rsc aes/gemaplib.c aes/geminit.c aes/geminit.h
  aes/gemobed.c aes/gemsclib.h aes/gemshlib.c tools/erd.c: Code cleanup:
  move non-displayed/untranslated strings from GEM resource to C code. (RFB)