@@ -286,10 +286,10 @@ static BYTE *app_parse(BYTE *pcurr, ANODE *pa)
 
         pcurr = scan_2(pcurr, &pa->a_aicon);
         if (pa->a_aicon >= NUM_IBLKS)
-            pa->a_aicon = min(IA_GENERIC,NUM_IBLKS-1);
+            pa->a_aicon = IA_GENERIC_ALT;
         pcurr = scan_2(pcurr, &pa->a_dicon);
         if (pa->a_dicon >= NUM_IBLKS)
-            pa->a_dicon = min(ID_GENERIC,NUM_IBLKS-1);
+            pa->a_dicon = ID_GENERIC_ALT;
         pcurr++;
 
         if (pa->a_flags & AF_ISDESK)
